# Meno-Telegram-Bot

./: .gitignore  bot.py  config.py  example.env  md_remove_tags.py  phrases.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run_bot.sh
src/meno_telegram_bot/: main.py  settings.py
src/meno_telegram_bot/data/: messages.json  phrases.json
src/meno_telegram_bot/utils/: __init__.py  telegram_format.py
tests/: test_telegram_format.py
