[project]
name = "meno-telegram-bot"
version = "0.1.0"
description = "Telegram bot for Meno / NSU"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22.5,<23",
    "pydantic>=2.11,<2.12",
    "pydantic-settings>=2.0,<3",
    "aiogram>=3.22.0,<4",
    "python-dotenv>=1.2.1,<2",
    "Markdown>=3.10,<4",
    "aiohttp"
]

[project.scripts]
meno-telegram-bot = "meno_telegram_bot.main:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "build",
    "pre-commit",
]